--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 		<link href="includes/css/bootstrap-glyphicons.css" rel="stylesheet">
 
 
-
-
-
-
-	  <!-- Custom CSS -->
+    <!-- Custom CSS -->
 		<link href="includes/css/styles.css" rel="stylesheet">
 
 		<!-- Include Modernizr in the head, before any other Javascript -->
@@ -273,46 +269,161 @@
 		<div class="col-lg-6">
 			<h4><span>Some Text Info</span></h4>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<ul>
 
-<li>Kale
-Kale is a</li>
+<h4>A List Group</h4>
+<div class="list-group">
+	 <a href="#" class="list-group-item">
+		 <h4 class="list-group-item-heading">Kale</h4>
+		 <p class="list-group-item-text">Kale is a</p>
+	 </a>
+	 <a href="#" class="list-group-item">
+		 <h4 class="list-group-item-heading">Carrots</h4>
+		 <p class="list-group-item-text">The carrot is a</p>
+	 </a>
+	 <a href="#" class="list-group-item">
+		 <h4 class="list-group-item-heading">Steel Cut-Oats</h4>
+		 <p class="list-group-item-text">Steel cut-oats are whole</p>
+	 </a>
+ </div>
 
-<li>Carrots
-The carrt is a
-</li>
-
-
-<li>Steel Cut-Oats
-Steel cut-oats are whole]
-</li>
-
-<p>Small Heading
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-
-
-
-		</div>
-
+<h5>Small Heading</h5>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ </div>
 
 	</div><!-- end tabbable -->
 
+	<div class="modal fade" id="myModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button class="close" data-dismiss="modal">&times;</button>
+
+					<h4 class="modal-title">A Modal Window</h4>
+				</div><!-- end modal-header -->
+				<div class="modal-body">
+					<h4>Text in a modal</h4>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+					<h4>Popovers in a modal</h4>
+					<a href="#" class="btn btn-danger pop" data-toggle="popover" data-placement="top" data-original-title="You clicked it!" data-content="I knew you would.">Don't click this button</a>
+
+					<h4>Tooltips in a modal</h4>
+					<a href="" data-original-title="Tooltip" rel="tooltip">This link</a> should have a tooltip, and so should <a href="#" data-original-title="Woohoo!" rel="tooltip">this one</a>!
+
+					<hr>
+
+					<p><small class="text-muted">PS. This form doesn't do anything. Just a heads up.</small></p>
+
+					<form class="form-horizontal">
+						<div class="form-group">
+							<label class="col-lg-2 control-label" for="inputName">Name</label>
+							<div class="col-lg-10">
+								<input class="form-control" id="inputName" placeholder="Name" type="text">
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-lg-2 control-label" for="inputEmail">Email</label>
+							<div class="col-lg-10">
+								<input class="form-control" id="inputEmail" placeholder="Email" type="email">
+							</div>
+						</div>
+
+						<div class="form-group">
+							<label class="col-lg-2 control-label" for="inputMessage">Message</label>
+							<div class="col-lg-10">
+								<textarea class="form-control" id="inputMessage" placeholder="Message" rows="3"></textarea>
+								<button class="btn btn-success pull-right" type="submit">Send!</button>
+							</div>
+						</div>
+					</form>
+				</div><!-- end modal-body -->
+
+				<div class="modal-footer">
+					<button class="btn btn-default" data-dismiss="modal" type="button">Close</button> <button class="btn btn-primary" type="button">Save changes</button>
+				</div><!-- end modal-footer -->
+			</div><!-- end modal-content -->
+		</div><!-- end modal-dialog -->
+	</div><!-- end myModal -->
+
+	<div class="row" id="moreCourses">
+		<div class="col-12">
+			<h3>Learn more about Web Design</h3>
+			<div class="thumbnails row">
+				<div class="col-6">
+					<div class="thumbnail">
+						<img src="images/item_psd2html5.jpg" alt="PSD to HTML5 & CSS3">
+
+						<div class="label label-success price"><span class="glyphicon glyphicon-tag"></span> <sup>$</sup>39</div>
+
+						<div class="caption">
+							<h3>PSD to HTML5 &amp; CSS3</h3>
+
+							<p>Learn how to take a PSD and turn it into a beautiful, hand-coded HTML5 &amp; CSS3 website with this web design crash course.</p>
+
+							<p><a href="https://www.udemy.com/build-beautiful-html5-website/" class="btn btn-primary btn-small" target="_blank">Take course</a> <a href="https://www.udemy.com/build-beautiful-html5-website/" target="_blank" class="btn btn-small btn-link">Learn more</a></p>
+						</div><!-- end caption -->
+					</div><!-- end thumbnail -->
+				</div><!-- end col-6 -->
+
+				<div class="col-6">
+					<div class="thumbnail">
+						<img src="images/item_webhosting101.jpg" alt="Web Hosting 101">
+
+						<div class="label label-info price"><span class="glyphicon glyphicon-tag"></span> Free</div>
+
+						<div class="caption">
+							<h3>Web Hosting 101</h3>
+
+							<p>Learn how to publish your own website live in no time with this web hosting crash course. Plus setup your first Wordpress site in 5-minutes!</p>
+
+							<p><a href="https://www.udemy.com/web-hosting-101/" class="btn btn-primary btn-small" target="_blank">Take course</a> <a href="https://www.udemy.com/web-hosting-101/" target="_blank" class="btn btn-small btn-link">Learn more</a></p>
+						</div><!-- end caption -->
+					</div><!-- end thumbnail -->
+				</div><!-- end col-6 -->
+			</div><!-- end row -->
+		</div><!-- end col-12 -->
+	</div><!-- end moreCourses -->
 
 
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-2">
+				<h6>Copyright &copy; 2013 {name}</h6>
+				</div><!-- end col-sm-2 -->
 
+				<div class="col-sm-4">
+					<h6>About Us</h6>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div><!-- end col-sm-4 -->
 
+				<div class="col-sm-2">
+					<h6>Navigation</h6>
+					<ul class="unstyled">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Links</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</div><!-- end col-sm-2 -->
 
+				<div class="col-sm-2">
+					<h6>Follow Us</h6>
+					<ul class="unstyled">
+						<li><a href="#">Twitter</a></li>
+						<li><a href="#">Facebook</a></li>
+						<li><a href="#">Google Plus</a></li>
+					</ul>
+				</div><!-- end col-sm-2 -->
 
-
-
-
-
-
-
-
-
+				<div class="col-sm-2">
+					<h6>Coded with <span class="glyphicon glyphicon-heart"></span> by Brad</h6>
+				</div><!-- end col-sm-2 -->
+			</div><!-- end row -->
+		</div><!-- end container -->
+	</footer>
 
 
 
